files/script/test/parse_error/string/test_string_error1.nl
def main()
{
    var string = "hello
}
#script("test/parse_error/string/test_string_error1.nl")